# cpp-ap-demo

./: .gitignore  BUILD.bazel  CMakeLists.txt  LICENSE  MODULE.bazel  README.md
ap_git/: BUILD.bazel  CMakeLists.txt  README.md  main.cpp
file_merger/: BUILD.bazel  CMakeLists.txt  README.md  main.cpp  merge_files.cpp
logging_mode/: BUILD.bazel  CMakeLists.txt  README.md  main.cpp
message_logger/: BUILD.bazel  CMakeLists.txt  README.md  main.cpp
numbers_converter/: BUILD.bazel  CMakeLists.txt  README.md  main.cpp
numbers_converter/app/: main.cpp
numbers_converter/include/: numbers_converter.hpp
numbers_converter/source/: numbers_converter.cpp
power_calculator/: BUILD.bazel  CMakeLists.txt  README.md  main.cpp  power.cpp
verbosity/: BUILD.bazel  CMakeLists.txt  README.md  main.cpp
verbosity/app/: main.cpp
verbosity/include/: verbosity.hpp
verbosity/source/: verbosity.cpp
