alias(
    name = "all_demos",
    actual = ":demos",
)

filegroup(
    name = "demos",
    srcs = [
        "//file_merger:file_merger",
        "//logging_mode:logging_mode",
        "//numbers_converter:numbers_converter",
        "//power_calculator:power_calculator",
        "//verbosity:verbosity",
    ],
    visibility = ["//visibility:public"],
)
